Use new viewport units to correctly set height on mobile that doesn't overlap browser chrome

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -43,10 +43,6 @@
       @apply pointer-events-none opacity-30;
     }
   }
-
-  .h-card {
-    @apply h-[95vh];
-  }
 }
 
 .swiper-slide {
